--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">Descubra mas inmuebles con nuestro catalogo.</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+                <a class="btn btn-light btn-xl" href="./en_construccion/index.html">Descargar Catalogo</a>
             </div>
         </section>
         <!-- Contact-->
